--- a/student_bio.html
+++ b/student_bio.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Student Bio</title>
-</head>
-<body>
-	<!--Title of Page-->
-	<h1>Student Bio</h1>
-	<!--Name-->
-	<h2>Branford Harris</h2>
-	<br>
-	<img src="https://j3ji6a.bn1302.livefilestore.com/y4pCWNTtKBcI-Ngsto56uYYZT6qEJqbtWDJgsSDg5wQeBcAi5U-srHcIUmYWTT-j9p9x1QoZAFfxXCv1kLMfLFf98XozQJ6tL7JYx090OsQn1C_UQfWDe_QbyQ9h66lBtHUJG3jfZGZpPrG7DoxX28l2Rwsz0ogdOmHjxVU3_WZe5OxRRrqbtZX-G_sb3_ihwH2__cIM5lcEKU2HmMWWgBbLg/IMGP6259.jpg" width="400px">
+	<head>
+		<title>Student Bio</title>
+	</head>
+	<body>
+	<!--Header of Page-->
+		<header>
+			<h1>Student Bio</h1>
+		</header>
+	
+	<!--Section 1: Profile Info-->
+		<section>
+			<h2>Branford Harris</h2>
+			<img src="https://j3ji6a.bn1302.livefilestore.com/y4pCWNTtKBcI-Ngsto56uYYZT6qEJqbtWDJgsSDg5wQeBcAi5U-srHcIUmYWTT-j9p9x1QoZAFfxXCv1kLMfLFf98XozQJ6tL7JYx090OsQn1C_UQfWDe_QbyQ9h66lBtHUJG3jfZGZpPrG7DoxX28l2Rwsz0ogdOmHjxVU3_WZe5OxRRrqbtZX-G_sb3_ihwH2__cIM5lcEKU2HmMWWgBbLg/IMGP6259.jpg" width="400px">
+	
+	
 	<!--Bio-->
-	<p>
-		Experienced social media and website manager with a knack for content creation. Known for producing engaging work under tight deadlines and even tighter budgets. Has an eye for digital storytelling and dynamic marketing campaigns.
-	</p>
-	<!--Contact-->
-	<h1>Contact Info</h1>
-	<ul>
-		<li>
-			<strong>Email: </strong><a href="mailto:branford.harris@outlook.com">branford.harris@outlook.com</a>
-		</li>
-		<li>
-			<strong>Github: </strong><a href="https://github.com/Afrothundr">Afrothundr</a>
-		</li>
-		<li>
-			<strong>Portfolio: </strong><a href="http://branfordharris.com">branfordharris.com</a>
-		</li>
-	</ul>
-</body>
+			<p>
+				Experienced social media and website manager with a knack for content creation.
+		 		 Known for producing engaging work under tight deadlines and even tighter budgets.
+		 		 Has an eye for digital storytelling and dynamic marketing campaigns.
+			</p>
+		</section>
+
+	<!-- Section 2: Contact Info-->
+		<section>
+			<h2>Contact Info</h2>
+			<ul>
+				<li>
+					<strong>Email: </strong><a href="mailto:branford.harris@outlook.com">branford.harris@outlook.com</a>
+				</li>
+				<li>
+					<strong>Github: </strong><a href="https://github.com/Afrothundr">Afrothundr</a>
+				</li>
+				<li>
+					<strong>Portfolio: </strong><a href="http://branfordharris.com">branfordharris.com</a>
+				</li>
+			</ul>
+		</section>
+	</body>
 </html>
